--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -1,6 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%  Sample document for preparing papers to  "Avtomatika i Telemekhanika"
-%%  charset=utf-8
+%%  Eremeykin and Mirkin paper for "Avtomatika i Telemekhanika"               %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[12pt]{a&t}
@@ -39,14 +38,13 @@
 
 Иерархические алгоритмы, основанные на \mbox{k-means}, в основном наследуют его недостатки, но привносят важное свойство: в ходе работы они выявляют дерево вложенности кластеров, которое может быть естественным образом использовано в некоторых приложениях. Например, такое дерево может отражать  филогенетическое родство при кластеризации биологических видов. Это интересное свойство побуждает исследователей искать пути устранения недостатков иерархических алгоритмов, использующих квадратичный критерий. 
 
-Как показали результаты экспериментов, проведённых в работе \cite{None}, метод аномальных кластеров в большинстве случаев порождает избыточное число кластеров, поэтому его можно использовать как предварительный шаг для агломеративного алгоритма Ward. Алгоритм Ward исходит из представления о том что на начальном этапе всякий единичный объект выступает в роли отдельного кластера и на каждом шаге происходит объединение двух ближайших кластеров пока их общее число не достигнет заданного значения.  Несмотря на то, что Ward в каноническом виде не требует инициализации, применение описанного предварительного шага вызвано необходимостью повышения производительности. При большом количестве объектов, на первых итерациях алгоритма требуется выполнить большое число сравнений (квадратично зависящее от числа объектов), и следовательно, время работы алгоритма в этом случае недопустимо велико. Благодаря применению предварительной проработки кластерной структуры с помощью аномального анализа отпадает необходимость сравнивать большое число кластеров в которых содержится всего по одному или несколько объектов. 
+Как показали результаты экспериментов, проведённых в работе \cite{Amorim-Makarenkov-Mirkin}, метод аномальных кластеров в большинстве случаев порождает избыточное число кластеров, поэтому его можно использовать как предварительный шаг для агломеративного алгоритма Ward. Алгоритм Ward исходит из представления о том что на начальном этапе всякий единичный объект выступает в роли отдельного кластера и на каждом шаге происходит объединение двух ближайших кластеров пока их общее число не достигнет заданного значения.  Несмотря на то, что Ward в каноническом виде не требует инициализации, применение описанного предварительного шага вызвано необходимостью повышения производительности. При большом количестве объектов, на первых итерациях алгоритма требуется выполнить большое число сравнений (квадратично зависящее от числа объектов), и следовательно, время работы алгоритма в этом случае недопустимо велико. Благодаря применению предварительной проработки кластерной структуры с помощью аномального анализа отпадает необходимость сравнивать большое число кластеров в которых содержится всего по одному или несколько объектов. 
 
-Описанная выше модификация получила название \mbox{A-Ward}. Есть еще \mbox{A-Ward$ _{p\beta} $}, которая суть то-то. Она ооочень крутая, но вот фиг знает как выбрать эти самые $ p\beta $. А вто тут то нам приходит на помощь статься [такая-то] в котрой предложен тупой перебор на основе SW. Но тупой перебор это тупо. Поэтому я предлагаю крутой эксперимент который покажет можем ли мы по части объектов определить свойства всей выборки. 
+Описанная выше модификация получила название \mbox{A-Ward}. В той же работе \cite{Amorim-Makarenkov-Mirkin} предложено дальнейшее усовершенствование алгоритма \mbox{A-Ward}, которое акцентирует внимание на обработке зашумлённых данных. Обобщённая версия алгоритма для произвольной степени Минковского $ p $ и с использованием весовых коэффициентов признаков $ w $, определяемых отдельно для каждого кластера, была названа \mbox{A-Ward$ _{p\beta} $}, где $ \beta $ обозначает степень весовых коэффициентов $ w $.
 
+Численные эксперименты на синтетических и реальных данных показали высокую эффективность алгоритма \mbox{A-Ward$ _{p\beta} $} в том числе для случаев с большой зашумленностью признаков, поэтому алгоритм представляет интерес для применения в практических случаях. Тем не менее, ввод новых параметров $ p $ и $ \beta $ породил необходимость выработки методики для определения их значений. В статье \cite{SW-Based-Search} рассмотрен подход к определению $ p $ и $ \beta $ методом перебора, в котором критерием качества результата при заданных значениях служит эмпирическая характеристика Silhouette Width (SW)\cite{SW-Canonical}. Такой подход поглощает преимущество в производительности, достигнутое введением предварительного шага аномального кластер-анализа, и требует больших временных затрат.
 
-
-\newpage
-объяснение проблемы и полезности ее решения (агломеративный кластеринг - заслуженный метод; но долгий; АУорд - способ ускорения вычислений за счет ускорения самой неприятной части; тем не менее - довольно долгий. Поэтому возникает идея - применять метод на подвыборке. Сложности реализации идеи: бла-бла)
+Специалистам по анализу данных хорошо известна идея, которая лежит в основе принципа кросс-валидации \cite{None} и заключается в сохранении основных свойств выборки даже в случае исключения из неё некоторой части объектов. Та же идея предположительно может быть использована для определения рациональных значений $ p $ и $ \beta $ по подвыборкам. Таким образом, в данной статье будет экспериментально исследована возможность выбора параметров $ p $ и $ \beta $ для алгоритма \mbox{A-Ward$ _{p\beta} $} путём перехода к подвыборкам и с использованием характеристики SW в качестве критерия качества результата.
 
 \section{Предлагаемое решение}
 (со всеми деталями, включая АУорд, Силуэт Видт и пр.)
@@ -92,6 +90,17 @@ Clustering: A Data Recovery Approach. London: CRC Press, 2012.
 {\it Chiang M.M.-T., Mirkin B.}
 Intelligent choice of the number of clusters in k-means clustering: an experimental study with different cluster spreads, Journal of Classification. 2010. V. 27 Iss. 1. 3--40.
 
+\bibitem{Amorim-Makarenkov-Mirkin}
+{\it de Amorim R.C., Makarenkov V., Mirkin B.}
+\mbox{A-Ward$ _{p\beta} $}: Effective hierarchical clustering using the Minkowski metric and a fast \mbox{k-means} initialisation. Information Sciences. 2016. V. 370-371 P. 343--354.
+
+\bibitem{SW-Based-Search}
+{\it de Amorim R.C., Shestakov A., Mirkin B., Makarenkov V.}
+The Minkowski central partition as a pointer to a suitable distance exponent and consensus partitioning. Pattern Recognition. 2017. V. 67 P. 62--72.
+
+\bibitem{SW-Canonical}
+{\it Rousseeuw P.}
+Silhouettes: A graphical aid to the interpretation and validation of cluster analysis. Journal of Computational and Applied Mathematics. 1987. V.20 P. 53--65.
 
 \end{thebibliography}
 
