working on A-Ward_p_beta description

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -19,10 +19,11 @@
 \maketitle
 
 \begin{abstract}
-Краткая аннотация статьи или заметки. Иногда не бывает. Хх
-хххххххххххх хххххх хххххххх х хххххххххххххх ххх ххххххх хххх.
-Хххххххххххххх ххх ххххх хххххх х хххххххххххххх ххх ххххххх
-хххх.
+Краткая аннотация статьи или заметки. Иногда не бывает. 
+\begin{enumerate}
+	\item Написать аннотацию
+	\item Проверить ссылки на литературу и добавить в библиографию недостающие
+\end{enumerate}
 \end{abstract}
 
 
@@ -42,11 +43,121 @@
 
 Описанная выше модификация получила название \mbox{A-Ward}. В той же работе \cite{Amorim-Makarenkov-Mirkin} предложено дальнейшее усовершенствование алгоритма \mbox{A-Ward}, которое акцентирует внимание на обработке зашумлённых данных. Обобщённая версия алгоритма для произвольной степени Минковского $ p $ и с использованием весовых коэффициентов признаков $ w $, определяемых отдельно для каждого кластера, была названа \mbox{A-Ward$ _{p\beta} $}, где $ \beta $ обозначает степень весовых коэффициентов $ w $.
 
-Численные эксперименты на синтетических и реальных данных показали высокую эффективность алгоритма \mbox{A-Ward$ _{p\beta} $} в том числе для случаев с большой зашумленностью признаков, поэтому алгоритм представляет интерес для применения в практических случаях. Тем не менее, ввод новых параметров $ p $ и $ \beta $ породил необходимость выработки методики для определения их значений. В статье \cite{SW-Based-Search} рассмотрен подход к определению $ p $ и $ \beta $ методом перебора, в котором критерием качества результата при заданных значениях служит эмпирическая характеристика Silhouette Width (SW)\cite{SW-Canonical}. Такой подход поглощает преимущество в производительности, достигнутое введением предварительного шага аномального кластер-анализа, и требует больших временных затрат.
+Численные эксперименты на синтетических и реальных данных показали высокую эффективность алгоритма \mbox{A-Ward$ _{p\beta} $} в том числе для случаев с большой зашумленностью признаков, поэтому алгоритм представляет интерес для применения в практических случаях. Тем не менее, ввод новых параметров $ p $ и $ \beta $ породил необходимость выработки методики для определения их значений. В статье \cite{SW-Based-Search} рассмотрен подход к определению $ p $ и $ \beta $ методом перебора, в котором критерием качества результата служит эмпирическая характеристика Silhouette Width (SW)\cite{SW-Canonical}. Такой подход поглощает преимущество в производительности, достигнутое введением предварительного шага аномального кластер-анализа, и требует больших временных затрат.
 
 Специалистам по анализу данных хорошо известна идея, которая лежит в основе принципа кросс-валидации \cite{None} и заключается в сохранении основных свойств выборки даже в случае исключения из неё некоторой части объектов. Та же идея предположительно может быть использована для определения рациональных значений $ p $ и $ \beta $ по подвыборкам. Таким образом, в данной статье будет экспериментально исследована возможность выбора параметров $ p $ и $ \beta $ для алгоритма \mbox{A-Ward$ _{p\beta} $} путём перехода к подвыборкам и с использованием характеристики SW в качестве критерия качества результата.
 
 \section{Предлагаемое решение}
+\subsection{Описание эксперимента}
+Пусть задано множество $ Y $ из $ N $ объектов, каждый из которых обладает $ V $ признаками. Такое множество можно выразить в виде таблицы данных:
+\begin{gather} \label{Y-table}
+	Y= \begin{pmatrix} 
+	y_{1} \\
+	\cdots \\ 
+	y_{N} 
+	\end{pmatrix}
+	= \begin{pmatrix} 
+		y_{11} & \cdots  & y_{1V} \\ 
+		\cdots & \cdots  & \cdots \\ 
+		y_{N1} & \cdots  & y_{NV} 
+	\end{pmatrix}
+\end{gather}
+Алгоритм \mbox{A-Ward$ _{p\beta} $} при заданных значениях параметров $ p $ и $ \beta $  позволяет получить кластерное разбиение $ S=\{C_1, \ldots, C_K\} $  этого множества. Получаемое кластерное разбиение состоит из заранее определённого числа $ K $ непересекающихся кластеров $ C_k $, объединение которых покрывает всё множество объектов $ Y $. Принцип работы и формальное описание алгоритма \mbox{A-Ward$ _{p\beta} $} приведены в разделе \ref{sec:a-ward-p-beta}.
+
+Для произвольного множества $ Y $ до сих про не было сформулировано эффективной методики поиска параметров  $ p $ и $ \beta $. Как было отмечено во введении, в статье \cite{SW-Based-Search} был опробован способ выбора параметров путём многократного запуска алгоритма \mbox{A-Ward$ _{p\beta} $} при переборе значений параметров в диапазоне $ \lbrack 1,5 \rbrack $ с шагом 0.1. Указанный диапазон определён исходя из опыта применения алгоритма: с превышением значений параметров 5 не достигается существенного улучшения качества разбиения. Нижняя граница диапазона определена математическим смыслом параметров.  
+
+Описанный способ потребует $ 41^2= 1681 $ запуск алгоритма, что чрезвычайно затратно с точки зрения времени. Поэтому была предложена идея для определения значений параметров по случайным подвыборкам. Из всего множества $ Y $ выбирается $ L $ подмножеств $ Y_l \subset Y $ с заданным числом элементов $ n \ll N $. По каждому подмножеству  $ Y_l $ оцениваются рациональные значения параметров $ p^*_l $ и $ \beta^*_l $. Усреднённые по $ l $ значения $ p^* = \overline{p^*_l} $ и $ \beta^* = \overline{\beta^*_l} $ принимаются в качестве рационального выбора для всего множества $ Y $. При правильном выборе соотношения между числом объектов в полной выборке $ N $, числом объектов в подвыборке $ n $, и числом подвыборок $ M $, как ожидается, можно получить результат кластеризации близкий к результату, полученному с помощью оценки по всей выборке $ N $, затратив при этом существенно меньшее время.
+
+Для подтверждения вышеописанных предположений предлагается рассмотреть численный эксперимент на синтетических данных. Синтетическая генерация позволяет гибко изменять характеристики данных, например число признаков и количество кластеров, степень их взаимного смешивания, а также определять истинное разбиение. Для генерации данных применяется метод описанный в статье \cite{Kovaleva}. Подробно его принцип работы разобран в разделе \ref{sec:data-generation}. Сейчас стоит иметь ввиду, что результат работы данного генератора синтетических данных полностью определяется следующими пятью параметрами:
+\begin{enumerate}
+	\item
+	Число объектов $ N $
+	\item
+	Число признаков $ V $
+	\item
+	Количество кластеров $ K $
+	\item 
+	Минимальное число объектов в кластере $ m $
+	\item
+	Степень взаимного смешивания кластеров $ a \in \lbrack0,1\rbrack $
+\end{enumerate}
+
+Данные сгенерированные по методике, описанной в \cite{Kovaleva} мы будем обозначать ключевым словом \texttt{kovaleva}, за которым через подчёркивание следуют обозначения размерности (например \mbox{$\mathtt{1000 \times 15 } $}), общего числа кластеров с префиксом \texttt{с}, минимального числа объектов в кластере с префиксом \texttt{m} и, наконец, степени взаимного смешивания с префиксом \texttt{a}. В таблице \ref{tab:datasets} приведены три типа данных которые будут использованы в ходе эксперимента с пояснениями в принятых обозначениях. Данные, сгенерированные по указанным значениям параметров, обладают важным свойством: они соответствуют трём случаям, взаимного отношения числа признаков и количества кластеров. В первом случае число кластеров меньше числа признаков, во втором случае примерно равно, а в третьем --- больше.
+
+\begin{table}[h!]
+	\centering
+	\caption{Параметры данных} \label{tab:datasets}
+	\begin{tabular}{ |l|c|c|c|c|c| }
+					\hline Обозначение               & N & V & K & m & a\\ 
+					\hline $\mathtt{kovaleva\_1000 \times 15\_c7\_m100\_a0.5}$ & 1000 & 15 & 7 & 100 & 0.5\\ 
+					\hline $\mathtt{kovaleva\_1000 \times 15\_c12\_m60\_a0.5}$ & 1000 & 15 & 12 & 60 & 0.5\\ 
+					\hline $\mathtt{kovaleva\_1000 \times 15\_c19\_m35\_a0.5}$ & 1000 & 15 & 19 & 35 & 0.5\\ 
+					\hline
+	\end{tabular}
+\end{table}
+
+В ходе эксперимента будет рассмотрены четыре схем формирования подвыборки (без учёта полной выборки как эталонного случая). Первые две схемы представляют собой однократный выбор соответственно по 100 и 200 объектов, два оставшиеся~--- пятикратное формирование подвыборок по 100 и 200 объектов с последующим усреднением результата. В таблице \ref{tab:subsampling} приведены все пять рассматриваемых схем. 
+
+\begin{table}[h!]
+	\centering
+	\caption{Схемы формирования подвыборки} \label{tab:subsampling}
+	\begin{tabular}{ |l|c|c| }
+		\hline Схема формирования подвыборки & \begin{tabular}{@{}c@{}}Размер подвыборки \\ $ n $\end{tabular} & \begin{tabular}{@{}c@{}}Число подвыборок  \\ $ L $\end{tabular}\\ 
+		\hline Полная выборка (1-1000) & 1000 & 1 \\ 
+		\hline Однокрантый выбор по 100 (1-100) & 100 & 1 \\ 
+		\hline Однокрантый выбор по 200 (1-200) & 200 & 1 \\ 
+		\hline Пятикрантый выбор по 100 (5-100) & 100 & 5 \\ 
+		\hline Пятикрантый выбор по 200 (5-200) & 200 & 5 \\ 		
+		\hline
+	\end{tabular}
+\end{table}
+
+При применении алгоритма \mbox{A-Ward$ _{p\beta} $} на реальных данных для оценки качества результата и выбора наилучших значений  $ p $, $ \beta $  нет возможности использовать подлинное разбиение, поэтому популярный индекс ARI \cite{ARI-canonical} не подходит для применения в роли целевой характеристики. В качестве замены этому индексу может быть использована эмпирическая величина Silhouette Width (SW)\cite{SW-Canonical}, хорошо зарекомендовавшая себя во многих приложениях \cite{SW1,SW2}. Интересно также установить насколько использование эмпирической величины SW ухудшает результат относительно результата, полученного с использованием подлинного разбиения и индекса ARI. Синтетическая генерация данных позволит применить индекс ARI для оценки разбиений, получаемых при различных значениях параметров $ p $, $ \beta $, относительно истинного разбиения. Способы вычисления характеристики SW и индекса ARI описаны в разделах \ref{sec:sw} и \ref{sec:ari} соответственно.
+
+При заданной характеристике качества может возникнуть ситуация неоднозначности при которой максимум достигается для нескольких пар параметров  $ p $ и $ \beta $. Для разрешения этой неоднозначности в рамках эксперимента предлагается рассмотреть два подхода:
+\begin{enumerate}
+	\item
+	Предпочтение отдаётся паре параметров $ p $, $ \beta $ для которой величина $ p^2+\beta^2 $ минимальна
+	\item
+	Пусть $ \{(p_t, \beta_t): t=1,\ldots,T\} $ --- множество пар параметров для которых достигается максимум выбранной характеристики качества (SW или ARI). Рассчитаем поэлементные средние значения $ \overline{p} = \dfrac{1}{T}\sum_{t=1}^{T}p_t,\:\overline{\beta} = \dfrac{1}{T}\sum_{t=1}^{T}\beta_t $. Наилучшим выбором признается та пара, для которой значение $ (p_t-\overline{p})^2 + (\beta_t-\overline{\beta})^2 $ минимально.
+\end{enumerate}
+
+Ниже приведена формулировка алгоритма подбора параметров $ p $, $ \beta $, используемого в эксперименте. Описанный алгоритм применяется для синтетических данных из таблицы \ref{tab:datasets} c использованием в общей сложности пяти схем формирования подвыборки согласно таблице \ref{tab:subsampling}. При этом рассматриваются две характеристики качества разбиения: эмпирическая SW и индекс ARI, основанный на известном истинном разбиении. Для разрешения неопределённости выбора максимума характеристики рассматриваются два подхода, описанных в списке выше.
+
+\begin{algorithm}[(Подбор параметров $ p $, $ \beta $ с переходом к подвыборкам)] \label{alg:experiment}
+	\
+	\begin{enumlist}[.] 
+		\item
+		Из множества $ Y $ случайным образом выбрать $ L $ подмножеств $ Y_l \subset Y $ с заданным размером $ n $. Пересечение выбранных подмножеств допускается.
+		
+		\item
+		Для всех значений параметров $ p=1,1.1,\ldots,5 $ и $ \beta=1,1.1,\ldots,5 $ выполнить алгоритм \mbox{A-Ward$ _{p\beta} $} применительно к каждому подмножеству  $ Y_l $ и получить результирующее разбиение $ S_l^{p\beta} $.
+		
+		\item
+		По каждому полученному разбиению  $ S_l^{p\beta} $ рассчитать значение характеристики Silhouette Width (или ARI): $ SW_l^{p\beta} = SW(S_l^{p\beta}) $.
+		
+		\item
+		Для каждого подмножества $ Y_l $ выбрать рациональные значения параметров $ p $ и $ \beta $, соответствующие максимальным значениям характеристики Silhouette Width (или ARI): $ (p^*_l,\beta^*_l)=\operatorname{arg\,max}\{SW_l^{p\beta}\} $. В случае, если максимум достигается для нескольких пар параметров, рассмотреть два возможных подхода разрешения неоднозначности. 
+		
+		\item Усреднить полученные значения по $ l $: $ p^* = \overline{p^*_l} $ и $ \beta^* = \overline{\beta^*_l} $. Получен результат алгоритма подбора параметров.
+		
+	\end{enumlist}
+\end{algorithm}
+
+\subsection{Алгоритм \mbox{A-Ward$ _{p\beta} $}} \label{sec:a-ward-p-beta}
+
+Рассмотрение алгоритма \mbox{A-Ward$ _{p\beta} $} следует начинать с описания общего принципа работы иерархических алгоритмов. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
+
+Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. 
+
+\newpage
+\subsection{Генератор данных типа kovaleva}\label{sec:data-generation}
+\subsection{Характеристика разбиения SW}\label{sec:sw}
+\subsection{Характеристика разбиения ARI}\label{sec:ari}
+
+данные 
+способ оценки
+что включено в сравнение
 (со всеми деталями, включая АУорд, Силуэт Видт и пр.)
 
 
