Complete Ward description

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -50,7 +50,7 @@
 \section{Предлагаемое решение}
 \subsection{Описание эксперимента}
 Пусть задано множество $ Y $ из $ N $ объектов, каждый из которых обладает $ V $ признаками. Такое множество можно выразить в виде таблицы данных:
-\begin{gather} \label{Y-table}
+\begin{gather} \label{eq:data-table}
 	Y= \begin{pmatrix} 
 	y_{1} \\
 	\cdots \\ 
@@ -146,9 +146,39 @@
 
 \subsection{Алгоритм \mbox{A-Ward$ _{p\beta} $}} \label{sec:a-ward-p-beta}
 
-Рассмотрение алгоритма \mbox{A-Ward$ _{p\beta} $} следует начинать с описания общего принципа работы иерархических алгоритмов. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
+Рассмотрение алгоритма \mbox{A-Ward$ _{p\beta} $} следует начинать с описания общего принципа работы иерархических алгоритмов и, в частности, Ward. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
 
-Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. 
+Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. Дивизивные алгоритмы в противоположность агломеративным действуют ``сверху вниз''.
+
+Алгоритм Ward относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Близость кластеров определяется по формуле:
+
+\begin{gather} \label{eq:ward-distance}
+	d_{Ward}(C_a,C_b)=\dfrac{N_aN_b}{N_a+N_b}\sum_{v=1}^{V}(c_{av}-c_{bv})^2,
+\end{gather}
+
+\begin{tabular}{llll}
+	где & $ C_a,\:C_b $ & {---} & два произвольных кластера, \\
+	& $ N_a,\:N_b $ & {---} & количество объектов в кластерах $ C_a $ и $ C_b $ соответственно \\
+	& $ V $ & {---} & число признаков у каждого объекта $ y_i \in Y $ \\
+	& $ c_{va},\:c_{vb} $ & {---} & $ v $-ая координата центров кластеров $ C_a $ и $ C_b $ соответственно 
+\end{tabular}
+
+В традиционной формулировке алгоритмы Ward формулируется следующим образом:
+
+\begin{algorithm}[(Ward)] \label{alg:experiment}
+	\
+	\begin{enumlist}[.] 
+		\item \textit{Инициализация.}
+		Задаться требуемым количеством кластеров $ K $. Установить текущее число кластеров $ k=N $ и текущее разбиение $ S=\{C_1,\ldots,C_N\} $, где каждый кластер состоит из единственного объекта $ C_k=\{y_k\} $. Центр кластера совпадает с объектом, входящим в этот кластер.
+		\item \label{itm:merge}\textit{Слияние.}
+		Определить два ближайших кластера $ C_a,\:C_b $, используя формулу \ref{eq:ward-distance}. Произвести слияние найденных кластеров в результирующий кластер $ C_{ab} = C_a \cup C_b $, содержащий одновременно объекты  $ C_a $ и $ C_b $.
+		\item \textit{Обновление центра.}
+		Установить центр кластера $ C_{ab} $ равным покомпонентному среднему всех объектов, входящих в $ C_{ab} $.
+		\item \textit{Условие остановки.}
+		Уменьшить текущее количество кластеров $ k $ на единицу. Если $ k>1 $ или $ k>K $, перейти к шагу \ref{itm:merge}. В противном случае текущее разбиение $ S $ является результирующим.
+	\end{enumlist}
+\end{algorithm}
+
 
 \newpage
 \subsection{Генератор данных типа kovaleva}\label{sec:data-generation}
