Complete A-Ward-p-beta steps description

--- a/eremeykin-mirkin-paper-rus.tex
+++ b/eremeykin-mirkin-paper-rus.tex
@@ -139,7 +139,7 @@
 		\item
 		Для каждого подмножества $ Y_l $ выбрать рациональные значения параметров $ p $ и $ \beta $, соответствующие максимальным значениям характеристики Silhouette Width (или ARI): $ (p^*_l,\beta^*_l)=\operatorname{arg\,max}\{SW_l^{p\beta}\} $. В случае, если максимум достигается для нескольких пар параметров, рассмотреть два возможных подхода разрешения неоднозначности. 
 		
-		\item Усреднить полученные значения по $ l $: $ p^* = \overline{p^*_l} $ и $ \beta^* = \overline{\beta^*_l} $. Получен результат алгоритма подбора параметров.
+		\item Результатом работы алгоритма являются усреднённые по $ l $ значения параметров $ p^* = \overline{p^*_l} $ и $ \beta^* = \overline{\beta^*_l} $. 
 		
 	\end{enumlist}
 \end{algorithm}
@@ -149,6 +149,86 @@
 Рассмотрение алгоритма \mbox{A-Ward$ _{p\beta} $} следует начинать с описания общего принципа работы иерархических алгоритмов и, в частности, Ward. В отличие от неиерархических алгоритмов, которые формируют плоскую структуру кластеров, как, например, \mbox{k-means}, иерархические алгоритмы в качестве результата предоставляют дополнительную информацию относительно взаимосвязей между кластерами. Эта информация выражена в виде вложенной последовательности разбиений \cite{Amorim-Makarenkov-Mirkin} и графически может быть изображена с помощью дендрограммы. На каждом уровне дендрограммы определённый объект $ y_i \in Y$ принадлежит единственному кластеру $ C_k $. В то же время этот объект может принадлежать на других уровнях другим кластерам, которые образованы разбиением кластера $ C_k $ или слиянием с другими кластерами. 
 
 Различают два вида иерархический  алгоритмов: агломеративные (объединяющие) и дивизивные (разделяющие). Агломеративные алгоритмы работают по принципу ``снизу верх''. На начальном этапе работы таких алгоритмов каждый единичный объект выступает в роли кластера. Во время работы происходит попарное объединение кластеров до тех пор, пока не будет достигнуто заданное число кластеров. Дивизивные алгоритмы в противоположность агломеративным действуют ``сверху вниз''.
+
+\begin{algorithm}[(Инициализация аномальными кластерами)] \label{alg:anomalous-p-beta}
+	\
+	\begin{enumlist}[.] 
+		
+		\item \textit{Инициализация.} Задаться значениями параметров $ p $ и $ \beta $. Глобальный центр данных $ c_Y $ вычислить как покомпонентный центр Минковского по всем объектам \mbox{$ y_i \in Y $.}
+		
+		\item \label{itm:anomalous-p-beta-tent-centroid} \textit{Текущий центр.} Задать пустой аномальный кластер $ C_t = \varnothing $. Веса равномерно распределить по всем признакам $ w_{kv} = 1/V $ при $ k=1,2 $ и $ v=1,\ldots,V $. Текущий центр аномального кластера $ c_t $ выбрать как объект, наиболее удалённый от глобального центра $ c_Y $. Расстояние между объектом $ y_i $ и центром произвольного кластера $ c_k $ вычисляется по формуле:
+		\begin{gather} \label{eq:obj-to-centroid-distance}
+			d_{p\beta}(y_i,c_k)=\sum_{v=1}^{V}w^\beta_{kv}|y_{iv}-c_{kv}|^p
+		\end{gather}
+		
+		\item \textit{Формирование аномального кластера.} В аномальный кластер добавить объекты, которые расположены ближе к текущему центру аномального кластера $ c_t $, чем к глобальному центру $ c_Y $ согласно расстоянию, определяемому формулой \ref{eq:obj-to-centroid-distance}. Если изменений в разбиении нет, прейти к шагу \ref{itm:anomalous-p-beta-save}.
+		
+		\item \textit{Обновление текущего центра.} Вычислить текущий центр аномального кластера $ c_t $ как покомпонентный центр Минковского по всем объектам в аномальном кластере $ y_i \in C_t $.
+		
+		\item \textit{Обновление весов.} Вычислить веса признаков по следующей формуле:
+		\begin{gather} \label{eq:weights}
+			w_{kv}=\dfrac{1}{\sum_{u=1}^{V} \left ( \dfrac{D_{kv}}{D_{ku}} \right )^{\frac{1}{\beta-1}}},
+		\end{gather}
+		\begin{tabular}{llll}
+			где & $D_{kv}=\sum_{i\in C_k}^{}|y_{iv}-c_{kv}|^\beta$ & {---} & разброс признака $ v $ в кластере $ C_k $ \\
+		\end{tabular}
+		
+		\item \label{itm:anomalous-p-beta-save} \textit{Сохранение параметров.} Включить текущий центр аномального кластера $ c_t $ в список центров $ \mathtt{c\_list} $, а веса $ w $ в список весов $ \mathtt{w\_list} $.
+		
+		\item \textit{Исключение аномального кластера.} Исключить из $ Y $ все объекты $ y_i \in C_t $. Если $ Y \neq \varnothing $, перейти к шагу \ref{itm:anomalous-p-beta-tent-centroid}.			
+		
+		\item \textit{ Результат.} Результатом работы алгоритма является разбиение S, а также списки центров кластеров $ \mathtt{c\_list} $ и весов $ \mathtt{w\_list} $.
+	\end{enumlist}
+\end{algorithm}
+
+\begin{algorithm}[(\mbox{$ imwk$-means$_{p\beta} $})] \label{alg:imwk-means}
+	\
+	\begin{enumlist}[.] 
+		
+		\item \textit{Инициализация.} Установить текущее разбиение пустым $ S=\varnothing $, а число кластеров $ K $ равным длине списка $ \mathtt{c\_list} $, который был получен при аномальной инициализации. 
+		
+		\item \label{itm:imwl-means-assignment}\textit{Формирование кластеров.} Каждый объект $ y_i \in Y $ поместить в кластер, центр которого $ c_k $ находится ближе всего к этому объекту. Близость объекта к центру кластера определяется  по формуле \ref{eq:obj-to-centroid-distance}. Если нет изменений в разбиении $  S $, перейти к шагу \ref{itm:imwl-means-result}.
+		
+		\item \textit{Обновление центров.} Вычислить новые координаты центра $ c_k $ каждого кластера $ C_k $ как покомпонентный центр Минковского всех объектов этого кластера $ y_i \in C_k $.
+		
+		\item \textit{Обновление весов.} Вычислить новые веса $ w_{kv} $ по формуле \ref{eq:weights} для $ k=1,\ldots,K $ и $ v=1,\ldots,V $. Перейти к шагу \ref{itm:imwl-means-assignment}
+		
+		\item \label{itm:imwl-means-result} \textit{ Результат.} Результатом работы алгоритма является разбиение S, а также списки центров кластеров $ \mathtt{c\_list} $ и весов $ \mathtt{w\_list} $.
+	\end{enumlist}
+\end{algorithm}
+
+\begin{algorithm}[(\mbox{A-Ward$ _{p\beta} $})] \label{alg:a-ward-p-beta}
+	\
+	\begin{enumlist}[.] 
+		\item \textit{Инициализация.} Параметры $ p $ и $ \beta $ остаются неизменными, которые были определены для \mbox{$ imwk$-means$_{p\beta} $}. Начальное состояние соответствует конечному для \mbox{$ imwk$-means$_{p\beta} $}: исходный список центров кластеров $ \mathtt{c\_list} $ и весов $ \mathtt{w\_list} $ является результатом работы предыдущего этапа.
+		
+		\item \label{itm:a-ward-p-beta-merge} \textit{Объединение кластеров.} Выбрать два ближайших кластера $ C_a,\:C_b \in S$ и объединить их в новый $ C_{ab} $. Близость кластеров определяется по следующей формуле: 
+		\begin{gather} \label{eq:ward-p-beta-distance}
+		d_{Ward}(C_a,C_b)=\dfrac{N_aN_b}{N_a+N_b}\sum_{v=1}^{V}\left ( \frac{w_{av}+w_{bv}}{2} \right )^\beta |c_{av}-c_{bv}|^p,
+		\end{gather}
+		
+		\begin{tabular}{llll}
+			где & $ N_a,\:N_b $ & {---} & количество объектов в кластерах $ C_a $ и $ C_b $ соответственно \\
+			& $ V $ & {---} & число признаков у каждого объекта $ y_i \in Y $ \\
+			& $w_{av},\:w_{bv} $ & {---} & веса $ v $-го признака в кластере $ C_a $ и $ C_b $ соответственно \\
+			& $ c_{av},\:c_{bv} $ & {---} & $ v $-ая координата центров кластеров $ C_a $ и $ C_b $ соответственно 
+		\end{tabular}
+		
+		\item \textit{Обновление центра.} Вычислить новое значение центра $ C_{ab} $ как покомпонентный центр Минковского по всем объектам $ y_i \in C_{ab} $.
+		
+		\item \textit{Обновление весов.} Вычислить новые веса $ w_{kv} $ по формуле \ref{eq:weights} для $ k=1,\ldots,K $ и $ v=1,\ldots,V $.
+		
+		\item \textit{Условие остановки.} Уменьшить текущее число кластеров на единицу. Если текуще число кластеров все ещё больше единицы или требуемого числа кластеров, прейти к шагу \ref{itm:a-ward-p-beta-merge} .
+		
+		
+		
+	\end{enumlist}
+\end{algorithm}
+
+
+\newpage
+Исходя из описания алгоритма Ward видно, что на начальных этапах работы происходит сравнение большого числа кластеров, примерно равного числу объектов. 
+
 
 Алгоритм Ward относится к агломеративным. На каждой итерации происходит слияние ближайших кластеров, таким образом чтобы внутрикластерная дисперсия была минимальной. Близость кластеров определяется по формуле:
 
@@ -163,23 +243,24 @@
 	& $ c_{va},\:c_{vb} $ & {---} & $ v $-ая координата центров кластеров $ C_a $ и $ C_b $ соответственно 
 \end{tabular}
 
-В традиционной формулировке алгоритмы Ward формулируется следующим образом:
-
-\begin{algorithm}[(Ward)] \label{alg:experiment}
-	\
-	\begin{enumlist}[.] 
-		\item \textit{Инициализация.}
-		Задаться требуемым количеством кластеров $ K $. Установить текущее число кластеров $ k=N $ и текущее разбиение $ S=\{C_1,\ldots,C_N\} $, где каждый кластер состоит из единственного объекта $ C_k=\{y_k\} $. Центр кластера совпадает с объектом, входящим в этот кластер.
-		\item \label{itm:merge}\textit{Слияние.}
-		Определить два ближайших кластера $ C_a,\:C_b $, используя формулу \ref{eq:ward-distance}. Произвести слияние найденных кластеров в результирующий кластер $ C_{ab} = C_a \cup C_b $, содержащий одновременно объекты  $ C_a $ и $ C_b $.
-		\item \textit{Обновление центра.}
-		Установить центр кластера $ C_{ab} $ равным покомпонентному среднему всех объектов, входящих в $ C_{ab} $.
-		\item \textit{Условие остановки.}
-		Уменьшить текущее количество кластеров $ k $ на единицу. Если $ k>1 $ или $ k>K $, перейти к шагу \ref{itm:merge}. В противном случае текущее разбиение $ S $ является результирующим.
-	\end{enumlist}
-\end{algorithm}
+В традиционной постановке алгоритм Ward формулируется следующим образом:
 
 
+
+
+%\begin{algorithm}[(Ward)] \label{alg:experiment}
+%	\
+%	\begin{enumlist}[.] 
+%		\item \textit{Инициализация.}
+%		Задаться требуемым количеством кластеров $ K $. Установить текущее число кластеров $ k=N $ и текущее разбиение $ S=\{C_1,\ldots,C_N\} $, где каждый кластер состоит из единственного объекта $ C_k=\{y_k\} $. Центр кластера совпадает с объектом, входящим в этот кластер.
+%		\item \label{itm:merge}\textit{Слияние.}
+%		Определить два ближайших кластера $ C_a,\:C_b $, используя формулу \ref{eq:ward-distance}. Произвести слияние найденных кластеров в результирующий кластер $ C_{ab} = C_a \cup C_b $, содержащий одновременно объекты  $ C_a $ и $ C_b $.
+%		\item \textit{Обновление центра.}
+%		Установить центр кластера $ C_{ab} $ равным покомпонентному среднему всех объектов, входящих в $ C_{ab} $.
+%		\item \textit{Условие остановки.}
+%		Уменьшить текущее количество кластеров $ k $ на единицу. Если $ k>1 $ или $ k>K $, перейти к шагу \ref{itm:merge}. В противном случае текущее разбиение $ S $ является результирующим.
+%	\end{enumlist}
+%\end{algorithm}
 \newpage
 \subsection{Генератор данных типа kovaleva}\label{sec:data-generation}
 \subsection{Характеристика разбиения SW}\label{sec:sw}
